# sanctum-spl-stake-pool-sdk

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose-local-validator.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
core/: Cargo.toml
core/src/: consts.rs  error.rs  internal_utils.rs  lib.rs  pda.rs  utils.rs
core/src/instructions/: cleanup_removed_validator_entries.rs  decrease_additional_validator_stake.rs  deposit_sol.rs  deposit_stake.rs  increase_additional_validator_stake.rs  initialize.rs  mod.rs  update_stake_pool_balance.rs  update_validator_list_balance.rs  withdraw_sol.rs  withdraw_stake.rs
core/src/state/: mod.rs  pool.rs  validator_list.rs
core/src/typedefs/: account_type.rs  fee.rs  future_epoch.rs  lockup.rs  mod.rs  stake_status.rs  validator_list_header.rs  validator_stake_info.rs
core/tests/: mod.rs
core/tests/common/: consts.rs  mod.rs  proptest_utils.rs  quote.rs
core/tests/tests/: instruction.rs  mod.rs  quote.rs  serde.rs
core/tests/tests/quote/: mod.rs  withdraw_sol.rs  withdraw_stake.rs
scripts/test-fixtures/: README.md  package.json  pnpm-lock.yaml
scripts/test-fixtures/scripts/: override-stake-acc.ts  set-spl-token-supply.ts
scripts/test-fixtures/utils/: consts.ts  file.ts  index.ts
test-fixtures/: README.md  backpackSOL-mint.json  backpackSOL-reserve.json  backpackSOL-stake-pool.json  bpsol-manager-fee.json  bpsol-validator-list.json  deposit-stake.json  jupSolStakePool.json  pico-associated-token.json  pico-sol-mint.json  pico-sol-referral-token.json  pico-sol-reserve-account.json  pico-sol-stake-pool.json  pico-sol-validator-list.json  pico-validator-stake.json  picosol-manager-fee.json  picosol-mint.json  picosol-reserve-account.json  picosol-stake-pool.json  picosol-validator-list.json  picosol-validator-stake.json  picosol-vote-account.json  referral-picosol-token.json  signer-picosol-token.json  signer.json  uninitialized-stake.json  validatorList.json
test-fixtures/key/: signer.json
ts/sdk/: Cargo.toml  DEV.md  Makefile  README.md
ts/sdk/postbuild/: package.json  postbuild.mjs
ts/sdk/src/: err.rs  lib.rs  pda.rs  utils.rs
ts/sdk/src/conv/: mod.rs  pubkey.rs
ts/sdk/src/instructions/: cleanup_removed_validator_entries.rs  deposit_sol.rs  deposit_stake.rs  increase_additional_validator_stake.rs  initialize.rs  mod.rs  update_stake_pool_balance.rs  update_validator_list_balance.rs  withdraw_sol.rs  withdraw_stake.rs
ts/sdk/src/instructions/additional_validator_stake/: decrease.rs  increase.rs  mod.rs
ts/sdk/src/state/: mod.rs  pool.rs  validator_list.rs
ts/sdk/src/typedefs/: lockup.rs  mod.rs  validator_stake_info.rs
ts/tests/: README.md  bun.lockb  index.ts  package.json  pnpm-lock.yaml  vitest.config.ts
ts/tests/test/: cleanup-removed-validator-entries.test.ts  decrease-additional-validator-stake.test.ts  deposit-sol.test.ts  deposit-stake.test.ts  deposit-withdraw-local.test.ts  increase-additional-validator-stake.test.ts  initialize.test.ts  pda.test.ts  serde.test.ts  update-stake-pool-balance.test.ts  update-validator-list-balance.test.ts  utils.ts  withdraw-sol.test.ts  withdraw-stake-test.ts
