[workspace]
resolver = "2"

members = [
    "core", 
    "ts/sdk",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# In general, keep default-features = false in workspace
# and enable individual features in indiv crates
borsh = { version = "^1", default-features = false }
bs58 = { version = "^0.5", default-features = false }
bs58-fixed-wasm = { git = "https://github.com/igneous-labs/bs58-fixed.git", branch = "master", default-features = false }
console_error_panic_hook = "^0.1"
const-crypto = { version = "^0.3.0", default-features = false }
data-encoding = { version = "2.8.0", default-features = false }
ed25519-compact = { version = "^2", default-features = false }
generic-array-struct = { version = "=0.3.1-bc", default-features = false }
hmac-sha256 = { version = "^1", default-features = false }
proptest = "^1"
sanctum-fee-ratio = { version = "^1", default-features = false }
sanctum-u64-ratio = { version = "^1", default-features = false }
serde = { version = "1.0", default-features = false }
serde_bytes = { version = "^0.11", default-features = false }
serde_json = "^1.0"
tsify-next = { version = "^0.5.5", default-features = false }
wasm-bindgen = "^0.2"
wasm-bindgen-test = "0.3"

# solana crates (for dev)
solana-pubkey = { version = "^2", default-features = false }

# workspace members
sanctum-spl-stake-pool-core = { path = "core" }
