[workspace]
resolver = "2"

members = [
    "core", 
    "ts/sdk",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# In general, keep default-features = false in workspace
# and enable individual features in indiv crates
borsh = { version = "^1", default-features = false }
bs58 = { version = "^0.5", default-features = false }
bs58-fixed-wasm = { git = "https://github.com/igneous-labs/bs58-fixed.git", branch = "master", default-features = false }
const-crypto = { version = "^0.3.0", default-features = false }
ed25519-compact = { version = "^2", default-features = false }
expect-test = { version = "^1", default-features = false }
generic-array-struct = { version = "^0.3.1", default-features = false }
hmac-sha256 = { version = "^1", default-features = false }
sanctum-fee-ratio = { version = "^2.2", default-features = false }
sanctum-u64-ratio = { version = "^2.2", default-features = false }
serde = { version = "1.0", default-features = false }
serde_bytes = { version = "^0.11", default-features = false }
tsify-next = { version = "^0.5.5", default-features = false }
wasm-bindgen = { version = "^0.2", default-features = false }

# dev dependencies
data-encoding = { version = "2.8.0", default-features = false }
proptest = { version = "^1", default-features = false }
serde_json = { version = "^1.0", default-features = false }

# solana crates (for dev)
solana-pubkey = { version = "^2", default-features = false }

# workspace members
sanctum-spl-stake-pool-core = { path = "core" }
