[package]
name = "spl-stake-pool" # npm package name without @sanctumso/ scope
version = "0.0.1-dev-6" # npm package version
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
borsh = { workspace = true }
bs58-fixed-wasm = { workspace = true, features = ["js"]}
ed25519-compact = { workspace = true }
hmac-sha256 = { workspace = true }
wasm-bindgen = { workspace = true }
sanctum-spl-stake-pool-core = { workspace = true , features = ["wasm"] }
tsify-next = { workspace = true, features = ["js"]}
serde = { workspace = true }
serde_bytes = { workspace = true }
bs58 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true, features = ["std"] }
solana-pubkey = { workspace = true, features = ["curve25519"] }
